--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
+    "stripe": "^7.63.1",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
