--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@stripe/stripe-js": "^2.1.11",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
