--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "nodemon": "^3.0.1",
     "parcel-bundler": "^1.12.5",
     "prettier": "^3.0.3"
   },
